<resources>
    <string name="app_name">VideoPlayer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Search</string>
    <string name="update">Update  Now </string>
    <string name="later">Later</string>


 <!--   <string-array name="category">
        <item>Top News</item>
        <item>Business</item>
        <item>Politics</item>
        <item>Sports</item>
        <item>Technology</item>
        <item>Movies</item>
    </string-array>
-->


    <string name="file_provider_authority" translatable="false">com.mojodigi.videoplayer.provider</string>
    <string name="menu_selectAll">SELECT ALL</string>
    <string name="menu_unselectAll">UNSELECT ALL</string>


    <!-- demo app ids -->
    <!--
       <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
       <string name="banner_add_id">ca-app-pub-3940256099942544/6300978111</string>
     -->
        <!-- demo app ids -->


    <!--actual  app id old  -->
<!--
    <string name="admob_app_id">ca-app-pub-5603925957932903~9934699880</string>
    <string name="banner_add_id">ca-app-pub-5603925957932903/7008497103</string>
  -->
    <!--actualapp id  old-->



    <!--actual  app id new -->

           <string name="admob_app_id" translatable="false">ca-app-pub-4867602581600600~8542884053</string>
           <string name="banner_add_id" translatable="false">ca-app-pub-4867602581600600/5903320410</string>


           <!--actual app id  new-->




    <string name="newversionavlbl">New version is available.</string>
    <string name="new_version_txt">There is new version of this application available, click UPDATE NOW to update.</string>

    <string name="unable_to_get_permission">Unable to get Permission</string>
    <string name="try_again">Try Again</string>
    <string name="go_to_permission">Go to Permissions to Grant Storage and settings permissions.</string>
    <string name="file_deleted">file deleted</string>
    <string name="settings">Settings</string>
    <string name="play_all">Play All</string>
    <string name="random">Random</string>
    <string name="loop">Loop</string>
    <string name="save">SAVE</string>
    <string name="vdo_not_found">NO VIDEO FOUND</string>

    <string name="latest_vdo">Latest video</string>
    <string name="favorite">favourite</string>

    <string name="device">Device</string>

    <string name="share">Share</string>
    <string name="details">Details</string>
    <string name="delete">Delete</string>

    <string name="privacy_policy">Privacy policy</string>
    <string name="home">Home</string>
    <string name="appversion">Version : </string>


</resources>
