<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/homee"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settingss"
            android:title="@string/settings" />
         <item
            android:id="@+id/nav_privacy_policy"
            android:icon="@drawable/privacy_policy"
            android:title="@string/privacy_policy" />

        <!--<item
            android:id="@+id/nav_aboutus"
            android:icon="@drawable/aboutus"
            android:title="About Us" />-->

    </group>


</menu>
