<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.SettingsActivity">


    <LinearLayout
        android:id="@+id/ll_videoname"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/img_back_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/txt_settinghead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|left"
            android:maxLength="40"
            android:text="@string/settings"
            android:textColor="@android:color/white"
            android:textSize="18dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radio_playall"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:checked="false"
                android:text="@string/play_all"
                android:textSize="20dp" />

            <RadioButton
                android:id="@+id/radio_random"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:checked="false"
                android:text="@string/random"
                android:textSize="20dp" />

            <RadioButton
                android:id="@+id/radio_loop"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:checked="false"
                android:text="@string/loop"
                android:textSize="20dp" />
        </RadioGroup>


        <Button
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:background="@drawable/blueroundcorner"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:id="@+id/btn_settingsave"/>

    </LinearLayout>


    <!-- <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:padding="10dp"
         android:weightSum="1">

         <TextView
             android:id="@+id/txt_playall"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_weight=".5"
             android:gravity="center"
             android:text="Play All"
             android:textSize="18dp" />

         <Switch
             android:id="@+id/switch_playall"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_weight=".5"
             android:gravity="center"
             android:textOff="OFF"
             android:textOn="ON" />


     </LinearLayout>

     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:background="@color/colorPrimary" />

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:padding="10dp"
         android:weightSum="1">

         <TextView
             android:id="@+id/txt_random"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_weight=".5"
             android:gravity="center"
             android:text="Random"
             android:textSize="18dp" />

         <Switch
             android:id="@+id/switch_random"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight=".5"
             android:textOff="OFF"
             android:textOn="ON" />


     </LinearLayout>

     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:background="@color/colorPrimary" />

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:padding="10dp"

         android:weightSum="1">

         <TextView
             android:id="@+id/txt_loop"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_weight=".5"
             android:gravity="center"
             android:text="Loop"
             android:textSize="18dp" />

         <Switch
             android:id="@+id/switch_loop"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight=".5"
             android:textOff="OFF"
             android:textOn="ON" />


     </LinearLayout>

     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:background="@color/colorPrimary" />-->

</LinearLayout>